--- a/Homework/Day_001_HW.ipynb
+++ b/Homework/Day_001_HW.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=#0000CD>作業1：請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：</font>  \n",
+    "# 作業1：請上 Kaggle, 在 Competitions 或 Dataset 中找一組競賽或資料並寫下：\n",
     "[Black Friday:A study of sales trough consumer behaviours](https://www.kaggle.com/mehdidag/black-friday)\n",
     "\n",
     "#### 1. 你選的這組資料為何重要  \n",
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=#0000CD>作業2：想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：</font>  \n",
+    "# 作業2：想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
     "#### 1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
     "    核心問題為每月的營業淨收入，假設與所在區域、載客時間、單趟收入、人潮最多的時段和區域資訊..等數據有關。\n",
     "#### 2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=#0000CD>作業3：請點選檢視範例依照 Day_001_example_of_metrics.ipynb 完成 Mean Squared Error 的函式</font>  \n",
+    "# 作業3：請點選檢視範例依照 Day_001_example_of_metrics.ipynb 完成 Mean Squared Error 的函式\n",
     "\n",
     "資料夾結構建立規則提醒：ML100 > data資料夾 & ipynb檔 \n",
     "\n",
