--- a/Homework/Day_001_HW.ipynb
+++ b/Homework/Day_001_HW.ipynb
@@ -13,8 +13,7 @@
     "    Analytics Vidhya主辦的競賽\n",
     "#### 3. 蒐集而來的資料型態為何  \n",
     "    結構化資料，共包括537577條數據，12個欄位:\n",
-    "    User_ID、Product_ID、Gender、Age、Occupation、City_Category、Stay_In_Current_City_Years、Marital_Status\n",
-    "    、Product_Category_1、Product_Category_2、Product_Category_3、Purchase。    \n",
+    "    User_ID、Product_ID、Gender、Age、Occupation、City_Category、Stay_In_Current_City_Years、Marital_Status、Product_Category_1、Product_Category_2、Product_Category_3、Purchase。    \n",
     "#### 4. 這組資料想解決的問題如何評估  \n",
     "    回歸問題: 預測因變量（購買量）  \n",
     "    分類問題: 預測購買商品的客戶屬性特點、預測客戶購買的商品類別"
